--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.15.0",
     "@tensorflow/tfjs-node": "^4.15.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "natural": "^6.10.4",
     "nodemon": "^3.0.2",
-    "tf_node_tokenizer": "^1.0.3"
+    "tf_node_tokenizer": "^1.0.3",
+    "xlsx": "^0.18.5"
   }
 }
